@@ -232,6 +232,9 @@ Optionen:
 | ``--multiplicityOff``                       | Schaltet die Prüfung der Multiplizität generell aus.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
 |                                             |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
 +---------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| ``--singlePass``                            | Schaltet alle Prüfungen aus, die nicht unmittelbar beim Ersten Lesen der Objekte ausgeführt werden können.                                                                                                                                                                                                                                                                                                                                                                                                                             |
+|                                             |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
++---------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | ``--skipPolygonBuilding``                   | Schaltet die Bildung der Polygone aus (nur ITF).                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
 |                                             |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
 +---------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
