@@ -1,6 +1,7 @@
 LATEST VERSION
 -----------------------------
 - new option --logtime to include timestamps in log file
+- new option --singlePass to skip any validations that require a second pass
 - iox-ili-1.21.11+
 
 ilivalidator 1.11.14 (2022-04-29)
